--- a/asset/css/style.css
+++ b/asset/css/style.css
@@ -28,16 +28,12 @@ body {
   text-transform: var(--text-transform);
   color: var(--main-color);
 }
-
-
-
-
-
-
-
-
-
-
+header {
+    position: sticky;
+    top: 0;
+    z-index: 100;
+    background-color: #d9eafd;
+}
 
 /* kimhak */
 
